# Embedded-Linux

03-Sysroot & Binutils/: readme.md
04-AVR Static Library/: makefile
04-AVR Static Library/00-LIB/: Common.h
04-AVR Static Library/01-MCAL/00-DIO/: DIO.c  DIO.h
04-AVR Static Library/01-MCAL/01-PORT/: PORT.c  PORT.h  PORT_config.c  PORT_register.h
04-AVR Static Library/03-APP/: main.c
04-AVR Static Library/UTIL/DELAY/: DELAY.c  DELAY.h
Admin Linux/AdminLinux_Exam1/: config_parser.sh
Admin Linux/AdminLinux_Task3/: readme.md
Admin Linux/AdminLinux_Task4/: README.md
AdminLinux_Exam1/: readme.md
AdminLinux_Task1/: README.md  script1.sh
AdminLinux_Task2/Q1/: bin_search.c
AdminLinux_Task2/Q2/: readme.md
AdminLinux_Task3/: script.sh
AdminLinux_Task4/: task4.sh
Embedded Linux/01-Libraries/dynamic_lib/: makefile
Embedded Linux/01-Libraries/dynamic_lib/src/: division.c
Embedded Linux/01-Libraries/static_lib/: makefile
Embedded Linux/01-Libraries/static_lib/inc/: calculator.h
Embedded Linux/01-Libraries/static_lib/src/: modulus.c
Embedded Linux/04-AVR Static Library/00-LIB/: BIT_MATH.h  STD_TYPES.h
Embedded Linux/04-AVR Static Library/01-MCAL/01-PORT/: PORT_config.h
Embedded Linux/05-cmake/calc_dynamic/: CMakeLists.txt  main.c
Embedded Linux/05-cmake/calc_static/: CMakeLists.txt
Embedded Linux/06-SD Image/: readme.md
